--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -9,10 +9,16 @@
 .wraper {
   height: 64px;
 }
-.top-bar {
+#top-bar {
   position: fixed;
   transition: all 0.3s;
   z-index: 2;
+  background-color: transparent;
+
+  .menu-item:hover {
+    color: red !important;
+  }
+
   .nav-link {
     .nav-link__container {
       button {
@@ -71,15 +77,7 @@
   }
 }
 
-.top-bar {
-  background-color: transparent;
-}
-
-.menu-item:hover {
-  color: red !important;
-}
-
-.current-bar {
+#top-bar.current-bar {
   background-color: #fff;
   transition: all 0.3s;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
