--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -81,6 +81,7 @@
   background-color: #fff;
   transition: all 0.3s;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+  color: #000;
   p {
     color: #000;
   }
