--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -4,4 +4,5 @@
   height: 60vh;
   background-image: url(https://themes-themegoods.b-cdn.net/grandtour/demo/wp-content/uploads/2016/12/pexels-photo-24377.jpg);
   background-position: 50% 50%;
+  background-size: cover;
 }
