--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -4,20 +4,36 @@
   .title {
     padding-top: 200px;
   }
-  .video-container {
-    width: 150vw;
-    height: 700px;
-  }
 
-  iframe {
-    position: fixed !important;
+  .video-background {
+    background: #000;
+    position: fixed;
     top: 0;
-    left: 50%;
-    width: 150vw;
-    height: 700px;
-    transform: translate(-50%, 0) scale(1.2);
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: -99;
+  }
+  .video-foreground,
+  .video-background iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     pointer-events: none;
-    z-index: -1;
+  }
+  @media (min-aspect-ratio: 16/9) {
+    .video-foreground {
+      height: 300%;
+      top: -100%;
+    }
+  }
+  @media (max-aspect-ratio: 16/9) {
+    .video-foreground {
+      width: 300%;
+      left: -100%;
+    }
   }
 
   .form-input {
@@ -36,24 +52,6 @@
     color: #fff;
     &:hover {
       background-color: #1ec6b6;
-    }
-  }
-
-  @media (min-aspect-ratio: 16/9) {
-    .video-container iframe {
-      height: 700px;
-    }
-  }
-
-  @media (max-aspect-ratio: 16/9) {
-    .video-container iframe {
-      width: 177.78vh;
-    }
-  }
-
-  @media (max-width: 767px) {
-    .video-container iframe {
-      width: 220vh;
     }
   }
 }
